Mon Feb  1 19:04:28 1999  Owen Taylor  <otaylor@redhat.com>

	* gmain.c (g_main_iterate): Release the main_loop
	 lock around calls to prepare() and check() so
	 that we are not holding the main loop lock
	 over user code.

1999-01-30  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: Moved the check for MT safe function variants
	after the determination of the MT cflags and use them there.

1999-01-29  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: Fixed typo. Now HPUX 11 thread system detection
	should work.

	* gutils.c (g_get_any_init): Changed initial bufsize to 64. Should
	solve some problems out there.

Wed Jan 27 23:21:50 CST 1999 Shawn T. Amundson <amundson@gtk.org>

	* INSTALL
	  NEWS
	  README
	  configure.in
	  glib.spec
	  docs/glib-config.1: version=1.1.14

	* Released GLib 1.1.14

1999-01-28  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: Simplified configure.in test for posix threads,
	systems, that provide /usr/include/pthread.h should also have the
	posix thread library. This is to avoid writing down all the tests
	twice. New test for thread system on HPUX 11. Info from Matt
	Nottingham <matt@sar.dera.gov.uk>.

Wed Jan 27 20:39:49 PST 1999 Manish Singh <yosh@gimp.org>

	* acinclude.m4: Xsed isn't valid here, don't use it

	* ltmain.sh
	* ltconfig: better file magic regexp for Linux libs

	* gmodule/Makefile.am: arg, noinst_LTLIBRARIES doesn't make shared
	libs, revert my previous change to this file

	* docs/texinfo.tex: add it so automake doesn't whine

Wed Jan 27 01:57:19 1999  Tim Janik  <timj@gtk.org>

	* configure.in (G_MODULE_HAVE_DLERROR): applied patch from Andrej
	Borsenkow <borsenkow.msk@sni.de> to also check for dlsym() in system
	libraries and -ldl, to catch systems that provide dlopen() in libc
	and dlsym() in libdl. this is at least the case for Reliant UNIX
	5.44 (labeling itself as SINIX).

Tue Jan 26 13:39:22 PST 1999 Manish Singh <yosh@gimp.org>
