@@ -1,3 +1,13 @@
+Tue Feb 02 00:08:54 1999  Tor Lillqvist  <tml@iki.fi>
+
+	* gmessages.c (g_log_default_handler): (Win32:) Don't call
+ 	ensure_stdout_valid (which would open an unneeded console window)
+ 	if we're calling a logging function.  Define ensure_stdout_valid
+ 	as an empty macro on Unix.
+
+	* gutils.c (g_get_any_init): (Win32:) Trust HOME first if defined,
+	then try HOMEDRIVE and HOMEPATH.
+
 Mon Feb  1 19:04:28 1999  Owen Taylor  <otaylor@redhat.com>
 
 	* gmain.c (g_main_iterate): Release the main_loop
